overflow issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,9 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif; }
 
+body {
+  overflow-x: hidden; }
+
 .container {
   margin: 0 auto;
   max-width: 1170px; }
